--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
 </head>
 <body>
-
     <h1>An error occured</h1>
-    <form action="/feed">
-        <button>return</button>
-    </form>
-
+    <a th:href="@{/feed}">return</a>
 </body>
 </html>
