--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,8 +12,6 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>
-<!--                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>-->
-<!--                <li><a th:unless="${authentication}" href="/login" class="nav-link px-2 text-secondary">Feed</a></li>-->
                 <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Games</a></li>
@@ -90,6 +88,6 @@
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
