--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
     <title th:text="${username}"></title>
 </head>
 <body style="background: #e1e3e6">
@@ -27,121 +30,112 @@
         </div>
     </div>
 </header>
-    <div class="container">
-        <div class="main-body">
-            <div class="row gutters-sm">
+<div class="container">
+    <div class="main-body">
+        <div class="row gutters-sm">
 
-                <!-- User's info-->
-                <div class="col-md-4 mb-3 mt-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="d-flex flex-column align-items-center text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                                <div class="mt-3">
-                                    <h4 th:text="${username}"></h4>
-                                </div>
+            <!-- User's info-->
+            <div class="col-md-4 mb-3 mt-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                            <div class="mt-3">
+                                <h4 th:text="${username}"></h4>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- User's info-->
-
-                <!-- Create post-->
-                <div class="col-md-8 mt-3" th:if="${isEditEnabled}">
-                    <form method="post"action="#">
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Tag</h6>
-                                </div>
-                                <input class="col-sm-9" name="tags">
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Theme</h6>
-                                </div>
-                                <input class="col-sm-9" name="theme">
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Topic</h6>
-                                </div>
-                                    <textarea class="col-sm-9" rows="3" name="body"></textarea>
-                            </div>
-                            <div class="row">
-                                <form action="/upload" class="dropzone needsclick" id="demo-upload">
-
-                                    <div class="dz-message needsclick">
-                                        <button type="button" class="dz-button">Drop files here or click to upload.</button>
-                                        <br/>
-                                    </div>
-
-                                </form>
-                            </div>
-
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Create</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </form>
-                </div>
-                <!-- Create post-->
-
-                <!-- User's posts-->
-                <form th:each="post: ${posts}" method="post">
-                <div class="justify-content-center">
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Tag</h6>
-                                </div>
-                                <div class="col-sm-9" th:text="${post.tags}">
-                                    Empty
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Theme</h6>
-                                </div>
-                                <div class="col-sm-9" th:text="${post.theme}"></div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0 text-secondary">Topic</h6>
-                                </div>
-                                <div class="col-sm-9" th:text="${post.body}"></div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <form method="post" action="">
-                                        <button th:if="${isEditEnabled}" class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Save</button>
-                                        <button th:if="${isEditEnabled}" class="btn btn-danger btn-login text-uppercase fw-bold" type="submit">Delete</button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                </form>
-                <!-- User's posts-->
             </div>
+            <!-- User's info-->
+
+            <!-- Create post-->
+            <div class="col-md-8 mt-3" th:if="${isEditEnabled}">
+                <form method="post" action="#">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Tag</h6>
+                                </div>
+                                <input class="col-sm-9" name="tags" required>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Theme</h6>
+                                </div>
+                                <input class="col-sm-9" name="theme" required>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Topic</h6>
+                                </div>
+                                <textarea class="col-sm-9" rows="3" name="body" required></textarea>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit" name="create">Create</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- Create post-->
+
+            <!-- User's posts-->
+                <div class="justify-content-center" th:each="post: ${posts}">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Tag</h6>
+                                </div>
+                                <div class="col-sm-9" name="tags" th:text="${post.tags}"></div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Theme</h6>
+                                </div>
+                                <div class="col-sm-9" name="theme" th:text="${post.theme}"></div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Topic</h6>
+                                </div>
+                                <div class="col-sm-9" name="body" th:text="${post.body}"></div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <a th:if="${isEditEnabled}"
+                                       th:href="@{/postEditor(id=${post.author.id}, username=${post.author.userName}, postId=${post.post_id})}"
+                                       type="submit"
+                                       class="btn btn-primary btn-login text-uppercase fw-bold">Edit
+                                    </a>
+                                    <a th:if="${isEditEnabled}"
+                                       th:href="@{/deletePost(id=${post.author.id}, username=${post.author.userName}, postId=${post.post_id})}"
+                                       class="btn btn-danger btn-login text-uppercase fw-bold"
+                                        >Delete
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <!-- User's posts-->
+
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous">
-
-    </script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
