--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="mt-2 col-8 ">
-        <form th:each="post: ${allPosts}">
+        <div th:each="post: ${allPosts}">
             <div class="mt-2 justify-content-center">
                 <div class="card mb-3">
                     <div class="card-body">
@@ -93,17 +93,16 @@
                             </div>
                         </div>
                         <div>
-                            <div>
-                                <div class="form-outline mb-4 mt-1">
-                                  <input type="text" id="addANote" class="form-control" placeholder="Type comment..."/>
-                                </div>
-                            </div>
+                            <form class="form-outline mb-4 mt-1" method="post" action="#" th:action="@{/saveComment(post_id=${post.post_id})}">
+                                <input type="text" name="commentText" class="form-control col-sm-9" placeholder="Type comment..."/>
+                                <button type="submit" class="btn btn-primary col-sm-3">Primary</button>
+                            </form>
                         </div>
                         <!--  Comments  -->
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
     <div class="col">
 
