--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -150,16 +150,10 @@
                                 </div>
                             </div>
                             <div>
-                                <div>
-<!--                                    <div class="form-outline mb-4 mt-1">-->
-<!--                                        <input type="text" id="addANote" class="form-control" placeholder="Type comment..."/>-->
-<!--                                        <button type="button" class="btn btn-primary">Primary</button>-->
-<!--                                    </div>-->
-                                    <form class="form-outline mb-4 mt-1">
-                                            <input type="text" id="addANote" class="form-control col-sm-9" placeholder="Type comment..."/>
-                                            <button type="button" class="btn btn-primary col-sm-3">Primary</button>
-                                    </form>
-                                </div>
+                                <form class="form-outline mb-4 mt-1" method="post" action="#" th:action="@{/saveComment(post_id=${post.post_id})}">
+                                    <input type="text" name="commentText" class="form-control col-sm-9" placeholder="Type comment..."/>
+                                    <button type="submit" class="btn btn-primary col-sm-3">Primary</button>
+                                </form>
                             </div>
                             <!--  Comments  -->
                         </div>
